--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@
       </div>
       <div>℃</div>
     </main>
+    <footer>
+      This project was coded by Danait Issiet, is open-sourced on Github, hosted
+      at Netlify.
+    </footer>
   </body>
 </html>
