Added footer links

--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
       <div>℃</div>
     </main>
     <footer>
-      This project was coded by Danait Issiet, is open-sourced on Github, hosted
-      at Netlify.
+      This project was coded by
+      <a href="www.linkedin.com/in/danait-issiet-3128a9247" target="_blank"
+        >Danait Issiet,</a
+      >
+      is open-sourced on
+      <a href="https://github.com/danu-y/Week-7-homework">Github,</a> hosted at
+      <a href="https://app.netlify.com/start/repos/danu-y%2FWeek-7-homework"
+        >Netlify.</a
+      >
     </footer>
   </body>
 </html>
